# pydatapeeker

./: .gitignore  README.md  pyproject.toml
datalens/: __init__.py  api.py  cli.py  utils.py
datalens/formatters/: __init__.py  core.py  tree.py
datalens/inspectors/: __init__.py  core.py  dataframe.py  ndarray.py  tensor.py
datalens/loaders/: __init__.py  core.py  csv_loader.py  json_loader.py  numpy_loader.py  parquet_loader.py  pickle_loader.py  pickle_static.py  yaml_loader.py
docs/: README_zh.md  api.md  api_zh.md
pydatapeekr/: __init__.py  api.py  cli.py  utils.py
pydatapeekr/formatters/: __init__.py  core.py  json_fmt.py  markdown.py  tree.py
pydatapeekr/inspectors/: __init__.py  core.py  dataframe.py  ndarray.py  table.py
pydatapeekr/loaders/: __init__.py  core.py  csv_loader.py  json_loader.py  numpy_loader.py  parquet_loader.py  pickle_loader.py  pickle_static.py  yaml_loader.py
tests/: test_api.py  test_cli.py
